*Version 1.2.1* Fix: Screen shift while typing on mobile devices

--- a/css/board.css
+++ b/css/board.css
@@ -121,7 +121,6 @@ h2 {
 @media only screen and (max-width: 576px) {
   .board-canvas {
     scroll-snap-type: x mandatory;
-    scroll-padding: 50%;
   }
 
   .list-wrapper {
